# vibTrack

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/boards/iot/: index.rst
boards/boards/iot/iot_i832_tba/: board.yml  iot_i832_tba_nrf52832.dts  iot_i832_tba_nrf52832.yaml
boards/boards/iot/iot_i833_tbb/: board.yml
boards/iot/iot_i832_tba/: Kconfig.defconfig  Kconfig.iot_i832_tba
boards/iot/iot_i832_tba/doc/: index.rst
drivers/inc/: LSM6dsox.h
drivers/src/: LSM6dsox.c
inc/: app_config.h  ble.h  nrfconfig.h  vibSens.h
inc/AccelerometerDetection/: AccelerometerDetection.h  AccelerometerProcess.h
inc/BLE/: ble.h
inc/Configurations/: Configurations.h
inc/DetectionLogic/: DetectionLogic.h
inc/Drivers/: LSM6dsox.h
inc/SystemStateMachine/: SystemInit.h  SystemStateMachine.h
inc/SystemStatsLogic/: SystemStatsLogic.h
src/: app_config.c  ble.c  main.c  nrfconfig.c  vibSens.c
src/BLE/: ble.c
src/Configurations/: Configurations.c
src/SystemStateMachine/: SystemInit.c  SystemStateMachine.c
src/SystemStatsLogic/: SystemStatsLogic.c
